--- a/yo.html
+++ b/yo.html
@@ -169,18 +169,18 @@ pre code {
 
 <div id="natalie-pinto-b" class="section level2">
 <h2><strong>Natalie Pinto B</strong></h2>
-<p>Hola mi nombre es <strong>Natalie Pinto B</strong></p>
+<p>Hola, mi nombre es <strong>Natalie Pinto B</strong></p>
 <div id="profesión" class="section level4">
 <h4>Profesión</h4>
-<p>Soy <strong>médica</strong>, me gradue de la <em>Universidad Autonóma de Bucaramanga - UNAB</em></p>
+<p>Soy <strong>médica</strong>, de la <em>Universidad Autonóma de Bucaramanga - UNAB</em></p>
 <p>Estoy cursando tercer semestre de la maestría en <strong>Epidemiología Clínica</strong></p>
 </div>
 <div id="personal" class="section level4">
 <h4>Personal</h4>
 <p>Nací en <em>Bucaramanga</em>, soy orgullosamente santandereana.</p>
 <p>Amo la carne y las papas a la francesa.</p>
-<p>Como pasatiempo favorito amo ver <strong>series y películas</strong>. Pero también me fascina un buen libro acompañado de un lugar tranquilo para disfrutarlo. <em>(Casi todas las películas si son basadas en libros, leo también el libro)</em></p>
-<p>La mayoría de mi tiempo libre se lo dedico a mi <strong>familia</strong>, para viajar con ellos y disfrutar tiempo de calidad.</p>
+<p>Como pasatiempo favorito amo ver <strong>series y películas</strong>. <em>(Casi todas las películas si son basadas en libros, leo también el libro)</em></p>
+<p>Mi saga favorita de películas es Harry Potter, pueden encontrar las 8 películas en <a href="https://hbomax.com/">HBO Max</a></p>
 </div>
 </div>
 
